Fix overflow issue in BookView.scss and make all form fields required

--- a/src/components/UI/BookView.scss
+++ b/src/components/UI/BookView.scss
@@ -9,6 +9,7 @@
   transition: all 3s;
   // background: url("../img/Annasblommor-green.svg") top no-repeat;
   // background-size: cover;
+  overflow: auto;
   &:hover {
     background-color: transparent;
   }
